--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -26,7 +26,7 @@
 .carousel .card {
   width: 100%;
   flex-shrink: 0;
-  scroll-snap-align: start;
+  /* scroll-snap-align: start; */
 }
 .carousel.cards-4 .card,
 .carousel.cards-5 .card{
@@ -40,7 +40,10 @@
 }
 
 /* Specific card overrides for carousel - END */
-
+.carousel.disable{
+  pointer-events: none;
+  background-color: red;
+}
 .carousel .carousel-nav {
   position: absolute;
   background: none;
